[1.3.0]新增设置命令tab补全内容的功能,准备公开发布插件了